# code-conductor

./: .env.example  .gitignore  MEMORY.md  PROGRESS.md  README.md  index.html  package-lock.json  package.json  prd.md  tsconfig.json  vite.config.ts
docs/: 00_MASTER_BUILD_PLAN.md  MEMORY.md  PHASE_1_TAURI_RUST_CORE.md  PHASE_2_CLI_ORCHESTRATOR_PTY.md  PHASE_3_QUESTION_DECISION_ENGINE.md  PHASE_4_MEMORY_AND_COMMAND_CENTER.md  PHASE_5_TIMELINE_RISK_GIT.md  PHASE_6_VOICE_AND_SESSION_REPLAY.md  PHASE_7_PLUGINS_PACKAGING.md  PROGRESS.md  TESTING_GUIDE.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agents/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/engine/: interceptor.rs  llm.rs  mod.rs
src-tauri/src/pty/: manager.rs  mod.rs  reader.rs
src/cli/: index.js
src/components/chat/: AgentChatView.tsx
src/components/command/: CommandBar.tsx
src/components/cost/: CostWarningWidget.tsx
src/components/decision/: DecisionModal.tsx
src/components/git/: GitDiffViewer.tsx
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/memory/: MemoryView.tsx
src/components/plugins/: PluginManager.tsx
src/components/replay/: SessionReplayer.tsx
src/components/risk/: DangerModal.tsx
src/services/: adrService.ts  antigravityMonitor.ts  commandCenter.ts  costEstimator.ts  geminiService.ts  interceptorEngine.ts  pluginLoader.ts  promptEnricher.ts  ptyService.ts  riskGuard.ts  sessionReplay.ts
src/store/: useProjectStore.ts  useUIStore.ts
src/styles/: globals.css
src/types/: ipc.ts
(+6 files in other folders)
