[package]
name = "ai-coding-orchestrator"
version = "0.1.0"
description = "AI Coding Orchestrator Desktop Application"
authors = ["Antigravity Engineering"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["shell-open"] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
portable-pty = "0.8"
parking_lot = "0.12"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
